[tool.poetry]
name = "sites-up-monitor"
version = "0.1.0"
description = ""
authors = ["heathcliff <smiron1703@gmail.com>"]
readme = "README.md"
packages = [{include = "sites_up_monitor"}]

[tool.poetry.dependencies]
python = "^3.10"
pythonping = "^1.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
