[tool.poetry]
name = "sites-up-monitor"
version = "1.0.0"
description = ""
authors = ["n-freman <nazarannanazarov@gmail.com>"]
readme = "README.md"
packages = [{include = "sites_up_monitor"}]

[tool.poetry.dependencies]
python = "^3.10"
pythonping = "^1.1.4"
tcping = "^0.1.1rc1"
pyopenssl = "^23.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
